# playground

./: .gitignore  .pre-commit-config.yaml  README.md  a.txt
.github/: release.yml
.github/workflows/: env_vars.yml  linters.yaml  poetry.yml  test.yml
experiments/poetry/: pyproject.toml
graphql/: main.py
graphql/github/: github.graphql
graphql/schema/: interfaces.graphql  mutation.graphql  query.graphql  task.graphql
issues/docker_buildx/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
issues/docker_buildx/files/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
issues/sqla/: docker-compose.yml  sqla.py  template.py
linters/: bandit.yml  hadolint.yaml  mypy-strict.ini  mypy.ini  pyproject.toml
poetry/: pyproject.toml  pyproject.toml.txt
sqla/: sqla.py  template.py
