[tool.poetry]
name = "shared"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10" # Any version of Python 3.10
shpyx = "0.0.14"
sqlalchemy = { extras = [
  "postgresql",
  "postgresql_asyncpg"
], version = "1.4.37" }

[tool.poetry.dev-dependencies]
mypy = "0.961"

